--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             <a href="#blogs">Blogs</a>            
         </nav>
 
+        <a href="#" class="fas fa-shopping-cart icon"></a>
+        <a href="#home" class="logo"><img src="./assets/images/logo.PNG" alt="Logo"></a>
+
+        <form action="" class="search-form">
+            <input type="search" placeholder="Search here..." id="search-box">
+            <label for="search-box" class="fas fa-search"></label>
+        </form>
+
     </header>
 
     <!-- ========= Header Section End ========== -->
