--- a/index.html
+++ b/index.html
@@ -7,39 +7,30 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/app.css">
+
     <title>Cafeteria</title>
 </head>
 <body>
-    <!-- ========= Header Section Start ========== -->
-    <header class="header">
-        <div id="menu-btn" class="fas fa-bars"></div>
-        <div id="search-btn" class="fas fa-search"></div>
+    <header>
+        <a href="#" class="logo"><img src="./assets/images/logo.PNG" id="logo" alt="Prego Lanches"></a>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#menu">Menu</a>
+            <a class="active" href="#home">Home</a>
+            <a href="#snacks">Snaks</a>
             <a href="#about">About</a>
-            <span class="space"></span>
-            <a href="#reviews">Reviews</a>
-            <a href="#contact">Contact</a>
-            <a href="#blogs">Blogs</a>            
+            <a href="#menu">Menu</a>
+            <a href="#review">Review</a>
+            <a href="#order">Order</a>
         </nav>
 
-        <a href="#" class="fas fa-shopping-cart icon"></a>
-        <a href="#home" class="logo"><img src="./assets/images/logo.PNG" alt="Logo"></a>
-
-        <form action="" class="search-form">
-            <input type="search" placeholder="Search here..." id="search-box">
-            <label for="search-box" class="fas fa-search"></label>
-        </form>
+        <div class="icons">
+            <i class="fas fa-bars" id="menu-bars"></i>
+            <i class="fas fa-search" id="search-icon"></i>
+            <a href="" class="fas fa-heart"></a>
+            <a href="" class="fas fa-shopping-cart"></a>
+        </div>
 
     </header>
-
-    <!-- ========= Header Section End ========== -->
-
-
-
-
 
 
 
