--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 
     </header>
 
+    <form action="" id="search-form">
+        <input type="search" placeholder="Search here..." id="search-box">
+        <label for="search-box" class="fas fa-search"></label>
+        <i class="fas fa-times" id="close"></i>
+    </form>
+
 
 
     <script src="./assets/javascript/app.js"></script>
