--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/app.css">
 
@@ -38,7 +40,62 @@
         <i class="fas fa-times" id="close"></i>
     </form>
 
+    <section class="home" id="home">
 
+        <div class=" swiper-container home-slider">
+
+            <div class="swiper-wrapper  wrapper">
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>Our Special Dish</span>
+                        <h3>X-Tudo On Special Bread</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <a href="#" class="btn">Order Now</a>
+                    </div>                    
+                    <div class="image">
+                        <img src="./assets/images/x-tudo-pao-frances.png" alt="X-Tudo">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>Our Special Dish</span>
+                        <h3>Hamburguer</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <a href="#" class="btn">Order Now</a>
+                    </div>                    
+                    <div class="image">
+                        <img src="./assets/images/Hamburguer.png" alt="Hamburguer">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>Our Special Dish</span>
+                        <h3>Grilled ham and cheese</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <a href="#" class="btn">Order Now</a>
+                    </div>                    
+                    <div class="image">
+                        <img src="./assets/images/misto-quente.png" alt="Misto">
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="swiper-pagination"></div>
+
+        </div>
+
+    </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <script src="./assets/javascript/app.js"></script>
 </body>
