DEVELOP THE 'ABOUT' SECTION
   *Build - The 'About' section has been started

--- a/index.html
+++ b/index.html
@@ -195,6 +195,41 @@
             </div>
         </div>
     </section>
+    <section class="about" id="about">
+        <h3 class="sub-heading">About Us</h3>
+        <h1 class="heading">Why Choose Us?</h1>
+
+        <div class="row">
+
+            <div class="image">
+                <img src="./assets/images/degrade.PNG" alt="">
+            </div>
+
+            <div class="content">
+                <h3>The Best Food in Taubaté</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <div class="icons-container">
+                    <div class="icons">
+                        <i class="fas fa-shipping-fast"></i>
+                        <span>Free Delivery</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-dollar-sign"></i>
+                        <span>Easy Payments</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-headset"></i>
+                        <span>24/7 Service</span>
+                    </div>
+                </div>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+        </div>
+    </section>
 
 
 
