--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
             </div>
         </div>
     </section>
+
     <section class="about" id="about">
         <h3 class="sub-heading">About Us</h3>
         <h1 class="heading">Why Choose Us?</h1>
@@ -202,7 +203,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="./assets/images/degrade.PNG" alt="">
+                <img src="./assets/images/pasteis.png"  alt="">
             </div>
 
             <div class="content">
