--- a/index.html
+++ b/index.html
@@ -232,6 +232,214 @@
         </div>
     </section>
 
+    <section class="menu" id="id">
+
+        <h3 class="sub-heading">Our Menu</h3>
+        <h1 class="heading">Today's Speciality</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <div class="image">
+                    <img src="./assets/images/menu-1.png" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious Food</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                    <span class="piece">$16.99</span>
+                </div>
+
+                <div class="box">
+                    <div class="image">
+                        <img src="./assets/images/menu-2.png" alt="">
+                        <a href="#" class="fas fa-heart"></a>
+                    </div>
+                    <div class="content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <h3>Delicious Food</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <a href="#" class="btn">Add to Cart</a>
+                        <span class="piece">$16.99</span>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="./assets/images/menu-3.png" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>Delicious Food</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            <a href="#" class="btn">Add to Cart</a>
+                            <span class="piece">$16.99</span>
+                        </div>
+
+                        <div class="box">
+                            <div class="image">
+                                <img src="./assets/images/menu-4.png" alt="">
+                                <a href="#" class="fas fa-heart"></a>
+                            </div>
+                            <div class="content">
+                                <div class="stars">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star-half-alt"></i>
+                                </div>
+                                <h3>Delicious Food</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <a href="#" class="btn">Add to Cart</a>
+                                <span class="piece">$16.99</span>
+                            </div>
+
+                            <div class="box">
+                                <div class="image">
+                                    <img src="./assets/images/menu-5.png" alt="">
+                                    <a href="#" class="fas fa-heart"></a>
+                                </div>
+                                <div class="content">
+                                    <div class="stars">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star-half-alt"></i>
+                                    </div>
+                                    <h3>Delicious Food</h3>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                    <a href="#" class="btn">Add to Cart</a>
+                                    <span class="piece">$16.99</span>
+                                </div>
+
+                                <div class="box">
+                                    <div class="image">
+                                        <img src="./assets/images/menu-6.png" alt="">
+                                        <a href="#" class="fas fa-heart"></a>
+                                    </div>
+                                    <div class="content">
+                                        <div class="stars">
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star-half-alt"></i>
+                                        </div>
+                                        <h3>Delicious Food</h3>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                        <a href="#" class="btn">Add to Cart</a>
+                                        <span class="piece">$16.99</span>
+                                    </div>
+
+                                    <div class="box">
+                                        <div class="image">
+                                            <img src="./assets/images/menu-7.png" alt="">
+                                            <a href="#" class="fas fa-heart"></a>
+                                        </div>
+                                        <div class="content">
+                                            <div class="stars">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star-half-alt"></i>
+                                            </div>
+                                            <h3>Delicious Food</h3>
+                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                            <a href="#" class="btn">Add to Cart</a>
+                                            <span class="piece">$16.99</span>
+                                        </div>
+
+                                        <div class="box">
+                                            <div class="image">
+                                                <img src="./assets/images/menu-8.png" alt="">
+                                                <a href="#" class="fas fa-heart"></a>
+                                            </div>
+                                            <div class="content">
+                                                <div class="stars">
+                                                    <i class="fas fa-star"></i>
+                                                    <i class="fas fa-star"></i>
+                                                    <i class="fas fa-star"></i>
+                                                    <i class="fas fa-star"></i>
+                                                    <i class="fas fa-star-half-alt"></i>
+                                                </div>
+                                                <h3>Delicious Food</h3>
+                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                                <a href="#" class="btn">Add to Cart</a>
+                                                <span class="piece">$16.99</span>
+                                            </div>
+
+                                            <div class="box">
+                                                <div class="image">
+                                                    <img src="./assets/images/menu-9.png" alt="">
+                                                    <a href="#" class="fas fa-heart"></a>
+                                                </div>
+                                                <div class="content">
+                                                    <div class="stars">
+                                                        <i class="fas fa-star"></i>
+                                                        <i class="fas fa-star"></i>
+                                                        <i class="fas fa-star"></i>
+                                                        <i class="fas fa-star"></i>
+                                                        <i class="fas fa-star-half-alt"></i>
+                                                    </div>
+                                                    <h3>Delicious Food</h3>
+                                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                                    <a href="#" class="btn">Add to Cart</a>
+                                                    <span class="piece">$16.99</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
