COMPLETE THE 'MENU' SECTION
   *Build - The 'Menu' section has been structured and styled

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                     <a href="#" class="btn">Add to Cart</a>
-                    <span class="piece">$16.99</span>
+                    <span class="price">$16.99</span>
                 </div>
 
                 <div class="box">
@@ -276,7 +276,7 @@
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                         <a href="#" class="btn">Add to Cart</a>
-                        <span class="piece">$16.99</span>
+                        <span class="price">$16.99</span>
                     </div>
 
                     <div class="box">
@@ -296,7 +296,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             <a href="#" class="btn">Add to Cart</a>
-                            <span class="piece">$16.99</span>
+                            <span class="price">$16.99</span>
                         </div>
 
                         <div class="box">
@@ -316,7 +316,7 @@
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                 <a href="#" class="btn">Add to Cart</a>
-                                <span class="piece">$16.99</span>
+                                <span class="price">$16.99</span>
                             </div>
 
                             <div class="box">
@@ -336,7 +336,7 @@
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                     <a href="#" class="btn">Add to Cart</a>
-                                    <span class="piece">$16.99</span>
+                                    <span class="price">$16.99</span>
                                 </div>
 
                                 <div class="box">
@@ -356,7 +356,7 @@
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                         <a href="#" class="btn">Add to Cart</a>
-                                        <span class="piece">$16.99</span>
+                                        <span class="price">$16.99</span>
                                     </div>
 
                                     <div class="box">
@@ -376,7 +376,7 @@
                                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                             <a href="#" class="btn">Add to Cart</a>
-                                            <span class="piece">$16.99</span>
+                                            <span class="price">$16.99</span>
                                         </div>
 
                                         <div class="box">
@@ -396,7 +396,7 @@
                                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                                 <a href="#" class="btn">Add to Cart</a>
-                                                <span class="piece">$16.99</span>
+                                                <span class="price">$16.99</span>
                                             </div>
 
                                             <div class="box">
@@ -416,22 +416,15 @@
                                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                                     <a href="#" class="btn">Add to Cart</a>
-                                                    <span class="piece">$16.99</span>
+                                                    <span class="price">$16.99</span>
                                                 </div>
                                             </div>
-
                                         </div>
-
                                     </div>
-
                                 </div>
-
                             </div>
-
                         </div>
-
                     </div>
-
                 </div>
 
             </div>
