--- a/index.html
+++ b/index.html
@@ -433,6 +433,40 @@
 
     </section>
 
+    <section class="review" id="review">
+
+        <h3 class="sub-heading">Customer's Review</h3>
+        <h1 class="heading">What They Say</h1>
+
+        <div class="review-slider">
+
+            <div class="wrapper">
+                
+                <div class="slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./assets/images/profile1.png" alt="">
+                        <div class="user-info">
+                            <h3>John Smith</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
