PREENCHA A SEÇÃO 'REVISÃO DO CLIENTE'
   *Build - The 'Customer Review' section has been completed

--- a/index.html
+++ b/index.html
@@ -438,14 +438,71 @@
         <h3 class="sub-heading">Customer's Review</h3>
         <h1 class="heading">What They Say</h1>
 
-        <div class="review-slider">
+        <div class="swiper-container review-slider">
 
-            <div class="wrapper">
+            <div class="swiper-wrapper">
                 
-                <div class="slide">
+                <div class="swiper-slide slide">
                     <i class="fas fa-quote-right"></i>
                     <div class="user">
                         <img src="./assets/images/profile1.png" alt="">
+                        <div class="user-info">
+                            <h3>John Smith</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./assets/images/profile2.png" alt="">
+                        <div class="user-info">
+                            <h3>John Smith</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./assets/images/profile3.png" alt="">
+                        <div class="user-info">
+                            <h3>John Smith</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./assets/images/profile4.png" alt="">
                         <div class="user-info">
                             <h3>John Smith</h3>
                             <div class="stars">
