--- a/index.html
+++ b/index.html
@@ -524,7 +524,66 @@
 
     </section>
 
+    <section class="order" id="order">
 
+        <h3 class="sub-heading">Order Now</h3>
+        <h1 class="heading">Free and Fast</h1>
+
+        <form action="">
+
+            <div class="inputBox">
+                <div class="input">
+                    <span>Your Name</span>
+                    <input type="text" placeholder="Enter Your Name">
+                </div>
+
+                <div class="input">
+                    <span>Your Number</span>
+                    <input type="text" placeholder="Enter Your Number">
+                </div>
+            </div>
+
+            <div class="inputBox">
+                <div class="input">
+                    <span>Your Order</span>
+                    <input type="text" placeholder="Enter Your Food Name">
+                </div>
+
+                <div class="input">
+                    <span>Additional Food</span>
+                    <input type="text" placeholder="Extra With Food">
+                </div>
+            </div>
+
+            <div class="inputBox">
+                <div class="input">
+                    <span>How Much</span>
+                    <input type="text" placeholder="How Many Orders">
+                </div>
+
+                <div class="input">
+                    <span>Date And Time</span>
+                    <input type="datetime-local">
+                </div>
+            </div>
+
+            <div class="inputBox">
+                <div class="input">
+                    <span>Your Address</span>
+                    <textarea name="" placeholder="Enter Your Address" id="" cols="30" rows="10"></textarea>
+                </div>
+
+                <div class="input">
+                    <span>Your Message</span>
+                    <textarea name="" placeholder="Enter Your Message" id="" cols="30" rows="10"></textarea>
+                </div>
+            </div>
+
+            <input type="submit" value="order now" class="btn">
+
+        </form>
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
