ITERATE BETWEEN NAVBAR AND EACH SECTION
   *Build - The function that makes the interaction between the NavBar links and each section has been created

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <h3>Contact Info</h3>
                 <a href="#">+55 12 3333-3333</a>
                 <a href="#">+55 12 99999-9999</a>
-                <a href="#">pregolanches@gmail.com</a>                
+                <a href="#">papaleguasburgers@gmail.com</a>                
             </div>
     
             <div class="box">
