CREATE LOADING SCREEN
   *Build - The 'loading' screen and its respective JS code have been created

--- a/index.html
+++ b/index.html
@@ -628,6 +628,11 @@
 
     </section>
 
+    <div class="loader-container">
+        <img src="./assets/images/Rolling-1s-200px.gif" alt="Loader">
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <script src="./assets/javascript/app.js"></script>
